# agent-smith

./: .env.example  .gitignore  PERMISSION_LAYER.md  PHASE3_AGENT_TASK_RUNTIME.md  README.md  REFACTOR_2026_07_SERVICE_READY_MONOREPO.md  alembic.ini  pyproject.toml
admin-ui/: README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
admin-ui/e2e/: admin.spec.ts
admin-ui/src/: app.test.tsx  app.tsx  index.css  main.tsx
apps/web/: README.md
clients/web/: README.md  app.js  index.html  server.py  styles.css
cursor-export/cursor-config-backup/: extensions.txt  settings.json
docker/: README.md  compose.yml
docs/: CHANGELOG.md  CLAUDE_CODE_PERMISSION_ARCHITECTURE.md  DOCUMENT_PROCESSING.md  FILE_STORAGE_IMPLEMENTATION_PLAN.md  IDENTITY_TRUSTED_ASSERTIONS.md  PARENT_APP_INTEGRATION.md  R2_STORAGE_OPERATIONS.md  ai-local-and-vision.md  harness-learning.md  mcp-architecture.md  permission-layer.md
docs/agent-smith-idea/: 01-product-principles-stack.md  02-storage-runtime-scope.md  03-enterprise-integration.md  04-capabilities-and-tools.md  05-identity-auth-policy.md  (+4 more)
examples/: demo_ai.py
migrations/: env.py
src/: config.py  imghdr.py
test_app/: __init__.py  server.py
tests/: conftest.py  test_admin_auth_core.py  test_admin_cli.py  test_admin_http.py  test_agent_config_tools.py  test_agent_harness.py  test_agent_harness_compaction.py  test_agent_loop.py  test_agent_run_service_recording_contract.py  test_agent_runtime_execution.py  test_agent_task_runner.py  test_agent_task_tools.py  test_ai_catalog_registry.py  test_ai_faux.py  test_ai_litellm_provider.py  test_ai_providers.py  test_app_invocation_auth.py  test_app_model_catalog.py  test_app_services.py  test_architecture_boundaries.py  test_attachments.py  test_base_tools.py  test_composition_roots.py  test_document_processing.py  test_file_routes.py  test_file_service.py  test_identity_provider_control.py  test_identity_provider_management.py  test_manage_resources.py  test_mcp_runtime.py  test_permission.py  test_postgres_admin_foundation.py  test_postgres_file_catalog.py  test_postgres_file_hardening.py  test_postgres_file_processing.py  test_postgres_llm_calls_schema.py  test_postgres_session_attachments.py  test_resources_runtime.py  test_runtime_config.py  test_s3_blob_store.py  (+4 more)
(+494 files in other folders)
